@@ -23,7 +23,7 @@ ThisBuild / javaOptions ++= Seq(
   "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
   "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
   "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
-  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-exports=java.base/sun.security.action=ALL-UNNAMED",
   "--add-opens=java.math/java.math=ALL-UNNAMED" //?
 )
 
